2003-05-18  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Tino Meinen.

2003-05-16  Abel Cheung  <maddog@linux.org.hk>

	* POTFILES.in: Remove non-existant file(s).

2003-05-16  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Added Serbian translation by Serbian team 
	(Prevod.org).

2003-05-13  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * es.po: Updated Spanish translation by
                 Lucas 'Basurero' Vieites <basurero@jazzfree.com>

2003-05-12  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Updated Portuguese translation.

2003-05-12  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-12  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Updated Korean translation.

2003-05-11  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>

	* ja.po: Updated Japanese translation.

2003-05-10  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation from work of
	Guy Daniel Clotilde <guy.clotilde@wanadoo.fr>.

2003-05-08  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-05-07  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

        * es.po: Updated Spanish translation by
                 Lucas 'Basurero' Vieites <basurero@jazzfree.com>

2003-05-06  Takeshi AIHANA <aihana@gnome.gr.jp>

	* ja.po: Updated Japanese translation.

2003-05-06  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-02  Paul Duffy <dubhthach@frink.nuigawlay.ie>

        * ga.po: Updated irish translation.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* POTFILES.in: Added libgames-support/games-gconf.c.
	* zh_TW.po: Updated traditional Chinese translation.

2003-04-23  Abel Cheung  <maddog@linux.org.hk>

	* POTFILES.skip: Remove non-existant file(s).

2003-04-23  Abel Cheung  <maddog@linux.org.hk>

	* es.po: Marked wrong entries as fuzzy (failed msgfmt check).

2003-03-30  Takeshi AIHANA <aihana@gnome.gr.jp>
