@@ -1,25 +1,24 @@
 # List of source files containing translatable strings.
 # Please keep this file in alphabetical order.
-aisleriot/SCHEME_GAMES.h
 aisleriot/dialog.c
-aisleriot/freecell.desktop.in.h
+aisleriot/freecell.desktop.in
 aisleriot/menu.c
 aisleriot/sol.c
-aisleriot/sol.desktop.in.h
+aisleriot/sol.desktop.in
 aisleriot/splash.c
 aisleriot/translatable_game_names.h
 gataxx/ataxx.c
 gataxx/gataxx.c
-gataxx/gataxx.desktop.in.h
-gataxx/gataxx.schemas.in.h
-gataxx/gataxx.soundlist.in.h
+gataxx/gataxx.desktop.in
+gataxx/gataxx.schemas.in
+gataxx/gataxx.soundlist.in
 gataxx/properties.c
 gdk-card-image/gdk-card-image.c
 glines/glines.c
-glines/glines.desktop.in.h
-gnect/data/gnect.desktop.in.h
-gnect/data/gnect.schemas.in.h
-gnect/data/gnect.soundlist.in.h
+glines/glines.desktop.in
+gnect/data/gnect.desktop.in
+gnect/data/gnect.schemas.in
+gnect/data/gnect.soundlist.in
 gnect/src/dialog.c
 gnect/src/gnect.c
 gnect/src/gui.c
@@ -27,61 +26,58 @@ gnect/src/main.c
 gnect/src/prefs.c
 gnect/src/theme.c
 gnibbles/gnibbles.c
-gnibbles/gnibbles.desktop.in.h
-gnibbles/gnibbles.soundlist.in.h
+gnibbles/gnibbles.desktop.in
+gnibbles/gnibbles.soundlist.in
 gnibbles/main.c
 gnibbles/preferences.c
 gnibbles/scoreboard.c
 gnobots2/game.c
 gnobots2/gnobots.c
-gnobots2/gnobots2.desktop.in.h
-gnobots2/gnobots2.soundlist.in.h
+gnobots2/gnobots2.desktop.in
+gnobots2/gnobots2.soundlist.in
 gnobots2/graphics.c
 gnobots2/menu.c
 gnobots2/properties.c
 gnobots2/statusbar.c
-gnome-stones/atari.caves.in.h
-gnome-stones/default.caves.in.h
-gnome-stones/gnome-stones.desktop.in.h
-gnome-stones/gnome-stones.keys.in.h
-gnome-stones/gnomekoban.caves.in.h
+gnome-stones/atari.caves.in
+gnome-stones/default.caves.in
+gnome-stones/gnome-stones.desktop.in
+gnome-stones/gnomekoban.caves.in
 gnome-stones/io.c
 gnome-stones/main.c
 gnome-stones/player.c
 gnome-stones/preferences.c
 gnome-stones/status.c
-gnome-stones/tutorial.caves.in.h
-gnometris/gnometris.desktop.in.h
-gnometris/gnometris.schemas.in.h
+gnome-stones/tutorial.caves.in
+gnometris/gnometris.desktop.in
+gnometris/gnometris.schemas.in
 gnometris/main.cpp
 gnometris/scoreframe.cpp
 gnometris/tetris.cpp
 gnomine/gnomine.c
-gnomine/gnomine.desktop.in.h
-gnomine/gnomine.schemas.in.h
+gnomine/gnomine.desktop.in
+gnomine/gnomine.schemas.in
 gnotravex/gnotravex.c
-gnotravex/gnotravex.desktop.in.h
+gnotravex/gnotravex.desktop.in
 gnotski/gnotski.c
-gnotski/gnotski.desktop.in.h
+gnotski/gnotski.desktop.in
 gtali/clist.c
-gtali/computer.c
-gtali/gtali.desktop.in.h
-gtali/gtali.schemas.in.h
+gtali/gtali.desktop.in
+gtali/gtali.schemas.in
 gtali/gyahtzee.c
 gtali/setup.c
 gtali/yahtzee.c
-gtali/yahtzee.h
 iagno/gnothello.c
-iagno/iagno.desktop.in.h
-iagno/iagno.schemas.in.h
-iagno/iagno.soundlist.in.h
+iagno/iagno.desktop.in
+iagno/iagno.schemas.in
+iagno/iagno.soundlist.in
 iagno/network.c
 iagno/othello.c
 iagno/properties.c
 libgames-support/games-gconf.c
 mahjongg/mahjongg.c
-mahjongg/mahjongg.desktop.in.h
-mahjongg/mahjongg.schemas.in.h
+mahjongg/mahjongg.desktop.in
+mahjongg/mahjongg.schemas.in
 same-gnome/same-gnome.c
-same-gnome/same-gnome.desktop.in.h
-same-gnome/same-gnome.schemas.in.h
+same-gnome/same-gnome.desktop.in
+same-gnome/same-gnome.schemas.in
