@@ -1,3 +1,7 @@
+2003-05-18  Abel Cheung  <maddog@linux.org.hk>
+
+	* POTFILES.in: Revert my previous bad commit. (intltool mis-usage)
+
 2003-05-18  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
